// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GIVEN AutocompleteComponent > WHEN input value is empty > AND input is focused > THEN component should match snapshot 1`] = `
<div
  id="root2"
>
  <mat-form-field
    class="mat-mdc-form-field mat-mdc-form-field-type-mat-input mat-form-field-appearance-fill mat-primary ng-untouched ng-pristine ng-valid mat-focused mat-mdc-form-field-label-always-float"
  >
    <!--container-->
    <div
      class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled mdc-text-field--focused"
    >
      <div
        class="mat-mdc-form-field-focus-overlay"
      />
      <!--container-->
      <div
        class="mat-mdc-form-field-flex"
      >
        <!--container-->
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-infix"
        >
          <label
            class="mdc-floating-label mat-mdc-floating-label mdc-floating-label--float-above"
            for="mat-input-a2"
            id="mat-mdc-form-field-label-a2"
            matformfieldfloatinglabel=""
          >
            <mat-label>
              Test runners
            </mat-label>
            <!--container-->
          </label>
          <!--container-->
          <!--container-->
          <!--container-->
          <input
            aria-activedescendant="mat-option-a6"
            aria-autocomplete="list"
            aria-controls="mat-autocomplete-a2"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test runners"
            aria-required="false"
            autocomplete="off"
            class="mat-mdc-autocomplete-trigger mat-mdc-input-element ng-untouched ng-pristine ng-valid mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
            id="mat-input-a2"
            matinput=""
            placeholder="Pick one"
            role="combobox"
            type="text"
          />
          <!--container-->
          <mat-autocomplete
            autoactivefirstoption=""
            class="mat-mdc-autocomplete"
          >
            <!--container-->
          </mat-autocomplete>
        </div>
        <!--container-->
        <!--container-->
      </div>
      <div
        class="mdc-line-ripple mdc-line-ripple--active"
        matformfieldlineripple=""
      />
      <!--container-->
    </div>
    <div
      class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="mat-mdc-form-field-hint-wrapper"
      >
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-hint-spacer"
        />
        <!--container-->
      </div>
    </div>
  </mat-form-field>
</div>
`;

exports[`GIVEN AutocompleteComponent > WHEN input value is empty > THEN component should match snapshot 1`] = `
<div
  id="root1"
>
  <mat-form-field
    class="mat-mdc-form-field mat-mdc-form-field-type-mat-input mat-form-field-appearance-fill mat-form-field-hide-placeholder mat-primary ng-untouched ng-pristine ng-valid"
  >
    <!--container-->
    <div
      class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled"
    >
      <div
        class="mat-mdc-form-field-focus-overlay"
      />
      <!--container-->
      <div
        class="mat-mdc-form-field-flex"
      >
        <!--container-->
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-infix"
        >
          <label
            class="mdc-floating-label mat-mdc-floating-label"
            for="mat-input-a1"
            id="mat-mdc-form-field-label-a1"
            matformfieldfloatinglabel=""
          >
            <mat-label>
              Test runners
            </mat-label>
            <!--container-->
          </label>
          <!--container-->
          <!--container-->
          <!--container-->
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test runners"
            aria-required="false"
            autocomplete="off"
            class="mat-mdc-autocomplete-trigger mat-mdc-input-element ng-untouched ng-pristine ng-valid mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
            id="mat-input-a1"
            matinput=""
            placeholder="Pick one"
            role="combobox"
            type="text"
          />
          <!--container-->
          <mat-autocomplete
            autoactivefirstoption=""
            class="mat-mdc-autocomplete"
          >
            <!--container-->
          </mat-autocomplete>
        </div>
        <!--container-->
        <!--container-->
      </div>
      <div
        class="mdc-line-ripple mdc-line-ripple--deactivating"
        matformfieldlineripple=""
      />
      <!--container-->
    </div>
    <div
      class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="mat-mdc-form-field-hint-wrapper"
      >
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-hint-spacer"
        />
        <!--container-->
      </div>
    </div>
  </mat-form-field>
</div>
`;

exports[`GIVEN AutocompleteComponent > WHEN input value is not empty > AND input is focused > THEN component should match snapshot 1`] = `
<div
  id="root7"
>
  <mat-form-field
    class="mat-mdc-form-field mat-mdc-form-field-type-mat-input mat-form-field-appearance-fill mat-primary ng-untouched ng-pristine ng-valid mat-focused mat-mdc-form-field-label-always-float"
  >
    <!--container-->
    <div
      class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled mdc-text-field--focused"
    >
      <div
        class="mat-mdc-form-field-focus-overlay"
      />
      <!--container-->
      <div
        class="mat-mdc-form-field-flex"
      >
        <!--container-->
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-infix"
        >
          <label
            class="mdc-floating-label mat-mdc-floating-label mdc-floating-label--float-above"
            for="mat-input-a7"
            id="mat-mdc-form-field-label-a7"
            matformfieldfloatinglabel=""
          >
            <mat-label>
              Test runners
            </mat-label>
            <!--container-->
          </label>
          <!--container-->
          <!--container-->
          <!--container-->
          <input
            aria-activedescendant="mat-option-a19"
            aria-autocomplete="list"
            aria-controls="mat-autocomplete-a7"
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test runners"
            aria-required="false"
            autocomplete="off"
            class="mat-mdc-autocomplete-trigger mat-mdc-input-element ng-untouched ng-pristine ng-valid mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
            id="mat-input-a7"
            matinput=""
            placeholder="Pick one"
            role="combobox"
            type="text"
          />
          <!--container-->
          <mat-autocomplete
            autoactivefirstoption=""
            class="mat-mdc-autocomplete"
          >
            <!--container-->
          </mat-autocomplete>
        </div>
        <!--container-->
        <!--container-->
      </div>
      <div
        class="mdc-line-ripple mdc-line-ripple--active"
        matformfieldlineripple=""
      />
      <!--container-->
    </div>
    <div
      class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="mat-mdc-form-field-hint-wrapper"
      >
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-hint-spacer"
        />
        <!--container-->
      </div>
    </div>
  </mat-form-field>
</div>
`;

exports[`GIVEN AutocompleteComponent > WHEN input value is not empty > THEN component should match snapshot 1`] = `
<div
  id="root6"
>
  <mat-form-field
    class="mat-mdc-form-field mat-mdc-form-field-type-mat-input mat-form-field-appearance-fill mat-form-field-hide-placeholder mat-primary ng-untouched ng-pristine ng-valid"
  >
    <!--container-->
    <div
      class="mat-mdc-text-field-wrapper mdc-text-field mdc-text-field--filled"
    >
      <div
        class="mat-mdc-form-field-focus-overlay"
      />
      <!--container-->
      <div
        class="mat-mdc-form-field-flex"
      >
        <!--container-->
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-infix"
        >
          <label
            class="mdc-floating-label mat-mdc-floating-label"
            for="mat-input-a6"
            id="mat-mdc-form-field-label-a6"
            matformfieldfloatinglabel=""
          >
            <mat-label>
              Test runners
            </mat-label>
            <!--container-->
          </label>
          <!--container-->
          <!--container-->
          <!--container-->
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-invalid="false"
            aria-label="Test runners"
            aria-required="false"
            autocomplete="off"
            class="mat-mdc-autocomplete-trigger mat-mdc-input-element ng-untouched ng-pristine ng-valid mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
            id="mat-input-a6"
            matinput=""
            placeholder="Pick one"
            role="combobox"
            type="text"
          />
          <!--container-->
          <mat-autocomplete
            autoactivefirstoption=""
            class="mat-mdc-autocomplete"
          >
            <!--container-->
          </mat-autocomplete>
        </div>
        <!--container-->
        <!--container-->
      </div>
      <div
        class="mdc-line-ripple mdc-line-ripple--deactivating"
        matformfieldlineripple=""
      />
      <!--container-->
    </div>
    <div
      class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="mat-mdc-form-field-hint-wrapper"
      >
        <!--container-->
        <!--container-->
        <div
          class="mat-mdc-form-field-hint-spacer"
        />
        <!--container-->
      </div>
    </div>
  </mat-form-field>
</div>
`;
